LPS-93856 - Fix close icon and alignment

--- a/modules/apps/frontend-theme/frontend-theme-styled/src/main/resources/META-INF/resources/_styled/css/compat/components/_alerts.scss
+++ b/modules/apps/frontend-theme/frontend-theme-styled/src/main/resources/META-INF/resources/_styled/css/compat/components/_alerts.scss
@@ -8,6 +8,10 @@
 		padding-left: $alert-dismissible-padding-left;
 		padding-right: $alert-dismissible-padding-right;
 		padding-top: $alert-dismissible-padding-top;
+
+		.close {
+			position: absolute;
+		}
 	}
 
 	.alert-fluid.alert-dismissable {
